# draughts

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.md
src/: Game.cpp  Game.h  main.cpp
src/GameEngine/: CMakeLists.txt  Network.h  Quad.cpp  Quad.h  QuadField.cpp  QuadField.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TexturedQuad.cpp  TexturedQuad.h  Window.cpp  Window.h  cmake_install.cmake
src/Network/: CMakeLists.txt  Client.cpp  Client.h  ListenerServer.cpp  ListenerServer.h  data.h
src/Potts/: CMakeLists.txt  Makefile  cmake_install.cmake
src/ge/: Button.cpp  Button.h  CMakeLists.txt  Graph.cpp  Graph.h  InputManager.cpp  InputManager.h  Network.h  Quad.cpp  Quad.h  QuadField.cpp  QuadField.h  RandomString.cpp  RandomString.h  Renderable.cpp  Renderable.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TexturedQuad.cpp  TexturedQuad.h  Timer.cpp  Timer.h  Window.cpp  Window.h  errors.cpp  errors.h  ge.h
src/lib/glad/: CMakeLists.txt  cmake_install.cmake
src/lib/stb/: CMakeLists.txt
src/network/: CMakeLists.txt  Client.cpp  Client.h  Data.h  ListenerServer.cpp  ListenerServer.h
